# soroban-attestation-authorities

./: .gitignore  Cargo.toml  README.md  deploy.sh  deployments.json  env.sh
__test__/: authority.ts  testutils.ts
airdrop/: Cargo.toml  Makefile  README.md
airdrop/tests/: airdrop_resolver.rs
fee-collection/: Cargo.toml  Makefile  README.md
fee-collection/src/: lib.rs
resolvers/: Cargo.toml  Makefile
resolvers/src/: lib.rs
taxcollector/: Cargo.toml  Makefile  README.md
taxcollector/tests/: taxcollector_resolver.rs
token-reward/: Cargo.toml  Makefile  README.md
token-reward/src/: lib.rs
