[package]
name = "airdrop"
version = { workspace = true }
edition = "2021"
authors = ["Immutable Labs (Daccred) <gm@daccred.xyz>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
resolvers = { path = "../resolvers", default-features = false }
stellar-macros = "0.4.1"
stellar-tokens = "0.4.1"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
